--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div style
 	<div id= "tartalom" align= "center">
 
-		<h1>Az államalapitás!!!</h1>
+		<h1>Az államalapitás</h1>
 
 
 		<div class="container">
